--- a/css/circle.css
+++ b/css/circle.css
@@ -1,3 +1,4 @@
+/* This css is to define each function background */
 .circle1 {
     position: absolute;
     top: 45%;
@@ -7,7 +8,7 @@
     background-color: black;
     border-radius: 50%;
     display: inline-block;
-    z-index: 1;
+    z-index: 0;
     opacity:0.3;
 }
 
@@ -20,7 +21,7 @@
     background-color: black;
     border-radius: 50%;
     display: inline-block;
-    z-index: 1;
+    z-index: 0;
     opacity:0.3;
 }
 
@@ -33,6 +34,6 @@
     background-color: black;
     border-radius: 50%;
     display: inline-block;
-    z-index: 1;
+    z-index: 0;
     opacity:0.3;
 }
