--- a/css/circle.css
+++ b/css/circle.css
@@ -12,6 +12,11 @@
     opacity:0.3;
 }
 
+.circle1:hover {
+	color: rgba(255, 255, 255, 0.85);
+	box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0px 2px inset;
+}
+
 .circle2 {
     position: absolute;
     top: 45%;
